--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ generateGrammarSource {
     outputDirectory = new File("generated-src/antlr/main/co/kenrg/sandylang".toString())
 }
 compileJava.dependsOn generateGrammarSource
+compileKotlin.dependsOn generateGrammarSource
 
 sourceSets {
     generated {
