--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,8 @@ dependencies {
 
 generateGrammarSource {
     maxHeapSize = "64m"
-    arguments += ['-package', 'co.kenrg.sandylang']
-    outputDirectory = new File("generated-src/antlr/main/co/kenrg/sandylang".toString())
+    arguments += ['-package', 'co.kenrg.kagelang']
+    outputDirectory = new File("generated-src/antlr/main/co/kenrg/kagelang".toString())
 }
 compileJava.dependsOn generateGrammarSource
 compileKotlin.dependsOn generateGrammarSource
