--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M3'
     }
 }
 
@@ -19,6 +20,7 @@ apply plugin: 'kotlin'
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'antlr'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 repositories {
     mavenLocal()
@@ -35,7 +37,19 @@ dependencies {
 
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile 'junit:junit:4.12'
+    testCompile 'org.apache.commons:commons-lang3:3.5'
+    testCompile 'commons-io:commons-io:2.5'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M3'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0-M3'
+}
+
+junitPlatform {
+    platformVersion '1.0.0-M3'
+    filters {
+        engines {
+            include 'junit-jupiter'
+        }
+    }
 }
 
 generateGrammarSource {
