--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ repositories {
 dependencies {
     antlr "org.antlr:antlr4:4.5.1"
 
+    compile project(':stdlib')
+
     compile "org.antlr:antlr4-runtime:4.5.1"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
